# PythonFinalTask

./: .bumpversion.cfg  .coveragerc  .darglint  .env  .flake8  .gitignore  .gitlint  .isort.cfg  .mypy.ini  .pre-commit-config.yaml  .pydocstyle.ini  .pylintrc  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FinalTask.md  LICENSE  LICENSE.txt  MANIFEST.in  Pipfile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  rss-test-theguardian.xml  rss_reader.py  rss_reader_checker.py  setup.cfg  setup.py  test_rss_reader.py  tests  tox.ini
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: codecov.yml  test.yml
rss_reader/: .setup.py.kate-swp  FinalTask.md  LICENSE  README.md  RssParser.py  Rss_reader.py  __init__.py  __main__.py  app_logger.py  argparser.py  article.py  cache_handlers.py  cashing_news.txt  cl_parser.py  constants.py  converter.py  db.py  debug.py  disp.py  feed_Container.py  feed_container.py  functions.py  json_format  json_io.py  json_to_html.py  json_to_json.py  logger_conf.py  main.py  parser.py  parser_debug.py  pyproject.toml  reader.py  requirements.txt  rss-test-bad.xml  rss_parser.py  rss_reader.py  setup.py  str_funcs.py  test.py  test_data.py  (+4 more)
rss_reader/components/: cache.py  converter.py  feed.py  news.py  parser.py
rss_reader/components/templates/: template.html
rss_reader/data/: badsample.xml  example.xml  news.json  teststorage.json  teststoragedata.json
rss_reader/data/cache/: cache.json
rss_reader/data/example/: news.xml
rss_reader/data/template/: template.html
rss_reader/local_storage/: rss_cache.json
rss_reader/local_storage/templates/: rss_template.html
rss_reader/main_reader/: add_colors.py  converter.py  html_template.html  rss_reader.py
rss_reader/modules/: argparser.py  cache.py  connector.py  convertor.py  output.py  rssparser.py  writer.py
rss_reader/project_data/json/: test_get_response.json  test_set_news_items_by_url.json  testexceptionsdata.json
rss_reader/reader/: RssParser.py  article.py  cache_handlers.py  colorize_logger.py  functions.py  html_converter.py  logger.ini  pdf_converter.py  rss_reader.py  rss_reader_main.py
rss_reader/reader/data/: data.sql
rss_reader/reader/templates/: html_templates.py
rss_reader/reader_app/: rss_conversion.py  rss_reader.py
rss_reader/reader_core/: news_processor.py  reader.py  rss_classes.py
rss_reader/rss_core/: cacher.py  converter.py  news_processor.py  parser.py  reader.py  rss_classes.py
rss_reader/rss_reader/: RssParser.py  __init__.py  __main__.py  app_logger.py  argparser.py  args.py  article.py  cache.py  cache_handlers.py  cashed_news.txt  cashing_news.txt  channel_Parser.py  channel_parse.py  channel_parser.py  cl_parser.py  convert.py  converter.py  dataset.py  db_worker.py  feed_container.py  format_converter.py  helper.py  helpers.py  html_converter.py  image_handlers.py  local_storage.py  logger_conf.py  logger_config.py  parser.py  pdf_converter.py  reader.py  rss_data_storage.db  rss_parser.py  rss_reader.py  rss_reader_main.py  rssparser.py  save_to_file.py  str_funcs.py  string_handlers.py  test_data.py
rss_reader/rss_reader/reader_core/: parser.py
rss_reader/rss_reader/templates/: html_templates.py  news.html
rss_reader/rss_reader/tests/: tests_for_news_processor.py  tests_for_parser.py  tests_for_reader.py  tests_for_rss_classes.py  xml_for_test.txt
rss_reader/rss_reader/tmp/: news.json
rss_reader/rssreader/: rss_reader.py
rss_reader/rssreader/rss_core/: news_processor.py  parser.py  reader.py  rss_classes.py
rss_reader/rssreader/tests/: tests_for_news_processor.py  tests_for_reader.py  tests_for_rss_classes.py
rss_reader/rssreader/utils/: util.py
rss_reader/sources/: yahoo_news.xml
rss_reader/src/: __init__.py  channel_Parser.py  feed_container.py  reader.py  rss_reader.py
rss_reader/src/modules/: argparser.py  localcache.py  output.py  rss_parser.py  url_validator.py
rss_reader/templates/: news_template.html  template.html
rss_reader/testing/: rss_cache_mock.json  test_rss_reader.py  yahoo_rss_mock.xml
rss_reader/tests/: TestFunctions.py  __init__.py  arguments_test.py  bad.xml  cashed_news.txt  data_for_tests.py  err_tests.py  fake_news.json  fake_rss.xml  fake_rss_site.xml  feed_test.py  file_json_format.json  image_handlers_test.py  main.py  pathmagic.py  rss_feed.xml  rss_reader_test.py  str_funcs_test.py  test.py  test_app_logger.py  test_argparser.py  test_arguments.py  test_article.py  test_cache.py  test_channel_parser.py  test_cl_arguments.py  test_connector.py  test_converter.py  test_creating_db.py  test_data.py  test_dataset.py  test_errors.py  test_exceptions.py  test_feed_container.py  test_functionality.py  test_functions.py  test_get_response.py  test_json_io.py  test_json_to_html.py  test_json_to_json.py  (+30 more)
rss_reader/tests/data/: cached_news.json  example.xml  example_without_rss.html  news_list.py  result_html.html  result_html_2.html  result_html_5.html  result_json_2.json  result_json_5.json
rss_reader/tests/tmp/: news.json
rss_reader/tmp/: news.json
rss_reader/utils/: db_processor.py  util.py
rss_reader_files/: README.md  RssParser.py  cache_handlers.py  html_converter.py  pdf_converter.py  requirements.txt  rss_reader.py  str_funcs.py
rss_reader_files/templates/: html_templates.py
rss_reader_files/tests/: feed_test.py
scripts/: clean_release.py
src/: feed.py  news.py  parser.py  rss_reader.py
src/ap_rss_reader/: __init__.py  __main__.py  ap_collections.py  ap_constants.py  ap_typing.py  cli.py  log.py  rss_channel.py  utils.py
tests/: .pydocstyle.ini  __init__.py  cashed_news.txt  conftest.py  data_test.py  feed_test.py  json_format.json  main_tests.py  news(2021-06-13 15:06:10.926600.html)  news(2021-06-13 15:10:59.682286.html)  news(2021-06-13 15:10:59.690406.html)  test.py  test_cli.py  test_data.py  test_main.py  test_process_response.py  test_rss_channel.py  test_utils.py  yahoo_news.xml
tests/mocks/: __init__.py  conftest.py
(+5 files in other folders)
