[build-system]
requires = ['setuptools>=57.0.0', 'wheel']
build-backend = 'setuptools.build_meta'

[tool.black]
line-length = 79
target-version = ['py38']
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.pyre_cache
  | \.pytest_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
