[metadata]
name = ap_rss_reader
version = 0.0.1
description = AP RSS-reader with CLI.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aplatkouski/ap-rss-reader
author = Artsiom Platkouski
author_email = komukc.apt@gmail.com
license = MIT
license_file = LICENSE.txt
license_files = LICENSE.txt
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules
keywords = rss reader, console application
project_urls =
    Bug Reports=https://github.com/aplatkouski/ap-rss-reader/issues
    Source=https://github.com/aplatkouski/ap-rss-reader

[options]
packages =
    find:
python_requires = >=3.8, <4
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.entry_points]
console_scripts =
    ap_rss_reader = ap_rss_reader.cli:main

[options.package_data]
ap_rss_reader =
    py.typed

[options.packages.find]
where = src

[bdist_wheel]
universal = True
