[metadata]
name = ap_rss_reader
version = 0.0.2
description = AP RSS-reader with CLI.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aplatkouski/ap-rss-reader
author = Artsiom Platkouski
author_email = komukc.apt@gmail.com
license = MIT
license_file = LICENSE.txt
license_files = LICENSE.txt
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules
keywords = rss reader, console application
project_urls =
    Bug Reports=https://github.com/aplatkouski/ap-rss-reader/issues
    Source=https://github.com/aplatkouski/ap-rss-reader

[options]
packages =
    find:
python_requires = >=3.8, <4
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.entry_points]
console_scripts =
    ap_rss_reader = ap_rss_reader.cli:main

[options.package_data]
ap_rss_reader =
    py.typed

[options.packages.find]
where = src

[bdist_wheel]
universal = True

[mypy]
mypy_path = scripts,src,tests
# Specify the target platform details in config, so your developers are
# free to run mypy on Windows, Linux, or macOS and get consistent
# results.
python_version = 3.8
platform = linux

show_column_numbers=True

# show error messages from unrelated files
follow_imports = normal

check_untyped_defs = True
disallow_incomplete_defs = True
disallow_untyped_calls = True
disallow_untyped_defs = True
no_implicit_optional = True
strict_optional = True
# ensure all execution paths are returning
warn_no_return = True
warn_redundant_casts = True
warn_return_any = True
warn_unused_configs = True
warn_unused_ignores = True
implicit_reexport = True

# No incremental mode
cache_dir=/dev/null

[mypy-tests.*]
warn_no_return = False
allow_untyped_decorators = True
