[metadata]
name = ap_rss_reader
version = 0.0.3
description = AP RSS-reader with CLI.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aplatkouski/ap-rss-reader
author = Artsiom Platkouski
author_email = komukc.apt@gmail.com
license = MIT
license_file = LICENSE.txt
license_files = LICENSE.txt
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules
keywords = rss reader, console application
project_urls =
    Bug Reports=https://github.com/aplatkouski/ap-rss-reader/issues
    Source=https://github.com/aplatkouski/ap-rss-reader

[options]
packages =
    find:
python_requires = >=3.8, <4
include_package_data = True
package_dir =
    =src
install_requires =
    beautifulsoup4==4.9.3
    lxml==4.6.3
    python-dateutil==2.8.1
    requests==2.25.1
    xhtml2pdf==0.2.5
zip_safe = False

[options.entry_points]
console_scripts =
    ap_rss_reader = ap_rss_reader.cli:main

[options.extras_require]
test =
    coverage==5.5
    pytest==6.2.4
dev=
    black==21.5b1
    bump2version==1.0.1
    check-manifest==0.46
    darglint==1.8.0
    flake8==3.9.2
    flake8-bugbear==21.4.3
    flake8-docstrings==1.6.0
    flake8-pytest-style==1.4.2
    flake8-typing-imports==1.10.1
    gitlint==0.15.1
    isort==5.8.0
    mypy==0.812
    mypy-extensions==0.4.3
    pre-commit==2.13.0
    pre-commit-hooks==4.0.1
    pydocstyle==6.1.1
    pylint==2.8.2
    pyupgrade==2.19.0
    tox==3.23.1
    twine==3.4.1

[options.package_data]
ap_rss_reader =
    py.typed

[options.packages.find]
where = src

[bdist_wheel]
universal = True

[mypy]
mypy_path = scripts,src,tests
# Specify the target platform details in config, so your developers are
# free to run mypy on Windows, Linux, or macOS and get consistent
# results.
python_version = 3.8
platform = linux

show_column_numbers=True

# show error messages from unrelated files
follow_imports = normal

check_untyped_defs = True
disallow_incomplete_defs = True
disallow_untyped_calls = True
disallow_untyped_defs = True
no_implicit_optional = True
strict_optional = True
# ensure all execution paths are returning
warn_no_return = True
warn_redundant_casts = True
warn_return_any = True
warn_unused_configs = True
warn_unused_ignores = True
implicit_reexport = True

# No incremental mode
cache_dir=/dev/null

[mypy-tests.*]
warn_no_return = False
allow_untyped_decorators = True
